--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div id="neck">
                  <ul id="zhuce">
                     <li class="nk">hi,欢迎使用    </li>
-                    <li class="nk"><a class="login" href="">请登录    </a></li>
+                    <li class="nk"><a class="login" href="login.html">请登录    </a></li>
                     <li class="nk"><a class="register" href="">免费注册     </a></li>
                 </ul>
             </div>
