--- a/login.html
+++ b/login.html
@@ -9,7 +9,9 @@
 <body>
 	<div id="header">
 		<div>
-			<h1>HiterBuy!</h1>
+			<a href="index.html">
+				<h1>HiterBuy!</h1>
+			</a>
 		</div>
 	</div>
 	<div id="content">
