--- a/login.html
+++ b/login.html
@@ -41,7 +41,7 @@
 						</div>
 						<div class="submit check">
 							<input type="submit" value="登录" class="signin">
-							<a href="register.html">
+							<a href="register.php">
 								<input type="button" value="注册">
 							</a>	
 						</div>
