--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
 	<meta charset="UTF-8">
-	<title>欢迎登录</title>
+	<title>欢迎登录here</title>
 	<link rel="stylesheet" type="text/css" href="css/login.css">
 	<script type="text/javascript" src="js/login.js"></script>
 </head>
@@ -41,7 +41,7 @@
 						</div>
 						<div class="submit check">
 							<input type="submit" value="登录" class="signin">
-							<a href="register.php">
+							<a href="register.html">
 								<input type="button" value="注册">
 							</a>	
 						</div>
