--- a/register.html
+++ b/register.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
 	<meta charset="UTF-8">
-	<title>欢迎注册</title>
+	<title>欢迎注册here</title>
 	<link rel="stylesheet" type=“text/css” href="css/register.css">
 	<link rel="stylesheet" type=“text/css” href="css/inc.css">
 	<script type="text/javascript" src="js/register.js"></script>
