--- a/register.html
+++ b/register.html
@@ -3,9 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>欢迎注册here</title>
-	<link rel="stylesheet" type=“text/css” href="css/register.css">
-	<link rel="stylesheet" type=“text/css” href="css/inc.css">
-	<script type="text/javascript" src="js/register.js"></script>
+	<link href="css/register.css" type="text/css" rel="stylesheet">
+	<link href="css/inc.css" type="text/css" rel="stylesheet">
 </head>
 <body>
 	<div id="header">
@@ -14,24 +13,39 @@
 	<div id="content">
 		<div id="register">
 			<form method="post" action="register.php">
-				<div class="row">
+				<div class="form-item">
 					<label>用户名称:</label>
-					<input type="text" name="name" placeholder="昵称">
+					<input class="field" type="text" name="name" placeholder="昵称">
 				</div>
-				<div class="row">
+				<div class="input-tip">
+					<span></span>
+				</div>
+				<div class="form-item">
 					<label>登录邮箱:</label>
-					<input type="text" name="name" placeholder="登录邮箱">
+					<input class="field" type="text" name="name" placeholder="登录邮箱">
 				</div>
-				<div class="row">
+				<div class="input-tip">
+					<span>邮箱格式不正确</span>
+				</div>
+				<div class="form-item">
 					<label>输入密码:</label>
-					<input type="password" name="pwd" placeholder="建议至少两种字符">
+					<input class="field" type="password" name="pwd" placeholder="建议至少两种字符">
 				</div>
-				<div class="row">
+				<div class="input-tip">
+					<span></span>
+				</div>
+				<div class="form-item">
 					<label>确认密码:</label>
-					<input type="password" name="pwd" placeholder="再次确认密码">
+					<input class="field" type="password" name="pwd" placeholder="再次确认密码">
 				</div>
-				<div class="row">
+				<div class="input-tip">
+					<span>两次密码输入不一致</span>
+				</div>
+				<div class="form-item">
 					<input type="submit" value="立即注册" class="btn_large">
+				</div>
+				<div class="input-tip">
+					<span></span>
 				</div>
 			</form>
 		</div>
