--- a/register.html
+++ b/register.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<div id="header">
-		<p>欢迎注册hiterbuy! <a>已有账号请登录</a></p>
+		<p>欢迎注册hiterbuy! <a class="fright">已有账号请登录</a></p>
 	</div>
 	<div id="content">
 		<div id="register">
@@ -41,8 +41,8 @@
 				<div class="input-tip">
 					<span>两次密码输入不一致</span>
 				</div>
-				<div class="form-item">
-					<input type="submit" value="立即注册" class="btn_large">
+				<div>
+					<input type="submit" value="立即注册" class="btn-register">
 				</div>
 				<div class="input-tip">
 					<span></span>
