--- a/register.html
+++ b/register.html
@@ -8,7 +8,12 @@
 </head>
 <body>
 	<div id="header">
-		<p>欢迎注册hiterbuy! <a class="fright">已有账号请登录</a></p>
+		<a href="index.html" target="blank">hiterbuy</a>
+		<div class="logo-title">欢迎注册</div>
+		<div class="have-account fright">
+			已有账号
+			<a href="login.html">请登录</a>
+		</div>
 	</div>
 	<div id="content">
 		<div id="register">
@@ -51,10 +56,16 @@
 		</div>
 	</div>
 	<div id="footer">
-		<span class="center">
-			<a>关于hiterbuy</a>		
-			<a>加入我们</a>		
-			<a>帮助中心</a>		
-		</span>
+		<div class="links">
+			<a href="#">关于hiterbuy</a>|		
+			<a href="#">加入我们</a>|		
+			<a href="#">联系我们</a>		
+			<a href="#">商家入住</a>|
+			<a href="#">友情连接</a>|		
+			<a href="#">帮助中心</a> 
+		</div>
+		<div class="copyright">
+			Copyright©2016-2026&nbsp&nbsp哈工大hiterbuy.com&nbsp版权所有
+		</div>		
 	</div>
 </body>
