--- a/register.html
+++ b/register.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<div id="header">
-		<a href="index.html" target="blank">hiterbuy</a>
+		<a href="index.html" target="blank" class="logo">hiterbuy!</a>
 		<div class="logo-title">欢迎注册</div>
 		<div class="have-account fright">
 			已有账号
@@ -29,7 +29,7 @@
 					<label>登录邮箱:</label>
 					<input class="field" type="text" name="name" placeholder="登录邮箱">
 				</div>
-				<div class="input-tip">
+				<div class="input-tip" id="email-error">
 					<span>邮箱格式不正确</span>
 				</div>
 				<div class="form-item">
@@ -43,7 +43,7 @@
 					<label>确认密码:</label>
 					<input class="field" type="password" name="pwd" placeholder="再次确认密码">
 				</div>
-				<div class="input-tip">
+				<div class="input-tip" id="passwd-error">
 					<span>两次密码输入不一致</span>
 				</div>
 				<div>
