--- a/register.html
+++ b/register.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<div id="header">
-		<a href="index.html" target="blank" class="logo">hiterbuy!</a>
+		<a href="index.html" target="blank" class="logo">HiterBuy!</a>
 		<div class="logo-title">欢迎注册</div>
 		<div class="have-account fright">
 			已有账号
@@ -41,7 +41,7 @@
 				</div>
 				<div class="form-item">
 					<label>确认密码:</label>
-					<input class="field" type="password" name="pwd" placeholder="再次确认密码">
+					<input class="field" type="password" name="pwd-ensure" placeholder="再次确认密码" onblur="pwd_ensure()">
 				</div>
 				<div class="input-tip" id="passwd-error">
 					<span>两次密码输入不一致</span>
