--- a/register.html
+++ b/register.html
@@ -5,6 +5,7 @@
 	<title>欢迎注册here</title>
 	<link href="css/register.css" type="text/css" rel="stylesheet">
 	<link href="css/inc.css" type="text/css" rel="stylesheet">
+	<script src="js/register.js"></script>
 </head>
 <body>
 	<div id="header">
