--- a/register.html
+++ b/register.html
@@ -56,7 +56,7 @@
 			</form>
 		</div>
 	</div>
-	<div id="footer">
+	<div class="footer">
 		<div class="links">
 			<a href="#">关于hiterbuy</a>|		
 			<a href="#">加入我们</a>|		
