--- a/login.html
+++ b/login.html
@@ -3,57 +3,55 @@
 <head>
 	<meta charset="UTF-8">
 	<title>欢迎登录here</title>
-	<link rel="stylesheet" type="text/css" href="css/login.css">
+	<link rel="stylesheet" type="text/css" href="css/inc.css">
 	<script type="text/javascript" src="js/login.js"></script>
 </head>
 <body>
-	<div id="header">
-		<div>
-			<a href="index.html">
-				<h1>HiterBuy!</h1>
-			</a>
-		</div>
+	<div class="header header-large">
+		<div class="logo"></div>
+		<a href="#" target="blank" class="logo">HiterBuy!</a>
+		<div class="logo-title">欢迎登录</div>
 	</div>
-	<div id="content">
-		<div id="showing">
-			<h1>规格严格</h1>
-			<h1>功夫到家</h1>
-		</div>
-		<div id="login">
-			<div id="logo">
-				<h1>HiterBuy!</h1>
-			</div>
-			<form action="login.php" method="post">
-			        	<div class="item">
-							<label>账号:</label>
-							<input type="text" name="id" placeholder="账号/邮箱号" class="input">
-						</div>
-			        	<div class="item">
-							<label>密码:</label>
-							<input type="password" name="pwd" placeholder="请输入密码" class="input">
-						</div>
-						<div class="check">
-							<p class="rember">
-								<input type="checkbox" id="rember" name="rember">
-								<label for="rember">一周内免登录</label>
-								<a href="findpwd.php">忘记密码了</a>
-							</p>
-						</div>
-						<div class="submit check">
-							<input type="submit" value="登录" class="signin">
-							<a href="register.html">
-								<input type="button" value="注册">
-							</a>	
-						</div>
+	<div class="content">
+		<div class="login-form">
+			<form action="login.php" method="post" class="fright form-small">
+				<div class="form-group-small">
+					<label>账号:</label>
+					<input type="text" name="id" placeholder="账号/邮箱号" class="field">
+				</div>
+				<div class="form-group-small">
+					<label>密码:</label>
+					<input type="password" name="pwd" placeholder="请输入密码" class="field">
+				</div>
+				<div class="form-bar">
+					<span class="fleft">
+						<input type="checkbox" id="remember" name="rember">
+						<label for="remember">一周内免登录</label>
+					</span>
+					<span class="fright">	
+						<a href="findpwd.php">忘记密码?</a>
+					</span>
+				</div>
+				<div class="form-bar">
+					<input type="submit" value="登录" class="fleft btn btn-small">
+					<a href="register.html" class="fright btn btn-small">注册</a>	
+				</div>
 			</form>
 		</div>
+		<div class="content-banner"></div>
 	</div>
-	<div id="footer">
-		<span class="fright">
-			<a>关于hiterbuy</a>.
-			<a>加入我们</a>.
-			<a>帮助中心</a>
-		</span>
+	<div class="footer">
+		<div class="links">
+			<a href="#">关于hiterbuy</a>|
+			<a href="#">加入我们</a>|
+			<a href="#">联系我们</a>|
+			<a href="#">商家入住</a>|
+			<a href="#">友情连接</a>|
+			<a href="#">帮助中心</a>|
+		</div>
+		<div class="copyright">
+			Copyright©2016-2026&nbsp&nbsp哈工大hiterbuy.com&nbsp版权所有
+		</div>
 	</div>
 </body>
 </html>
