--- a/register.html
+++ b/register.html
@@ -8,7 +8,7 @@
 	<script src="js/register.js"></script>
 </head>
 <body>
-	<div id="header">
+	<div class="header-large">
 		<a href="index.html" target="blank" class="logo">HiterBuy!</a>
 		<div class="logo-title">欢迎注册</div>
 		<div class="have-account fright">
@@ -16,31 +16,31 @@
 			<a href="login.html">请登录</a>
 		</div>
 	</div>
-	<div id="content">
-		<div id="register">
+	<div class="content">
+		<div class="register-form">
 			<form method="post" action="register.php">
-				<div class="form-item">
+				<div class="form-group">
 					<label>用户名称:</label>
 					<input class="field" type="text" name="name" placeholder="昵称">
 				</div>
 				<div class="input-tip">
 					<span></span>
 				</div>
-				<div class="form-item">
+				<div class="form-group">
 					<label>登录邮箱:</label>
 					<input class="field" type="text" name="name" placeholder="登录邮箱">
 				</div>
 				<div class="input-tip" id="email-error">
 					<span>邮箱格式不正确</span>
 				</div>
-				<div class="form-item">
+				<div class="form-group">
 					<label>输入密码:</label>
 					<input class="field" type="password" name="pwd" placeholder="建议至少两种字符">
 				</div>
 				<div class="input-tip">
 					<span></span>
 				</div>
-				<div class="form-item">
+				<div class="form-group">
 					<label>确认密码:</label>
 					<input class="field" type="password" name="pwd-ensure" placeholder="再次确认密码" onblur="pwd_ensure()">
 				</div>
@@ -60,7 +60,7 @@
 		<div class="links">
 			<a href="#">关于hiterbuy</a>|		
 			<a href="#">加入我们</a>|		
-			<a href="#">联系我们</a>		
+			<a href="#">联系我们</a>|		
 			<a href="#">商家入住</a>|
 			<a href="#">友情连接</a>|		
 			<a href="#">帮助中心</a> 
