--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
 	</div>
 	<div class="content">
 		<div class="login-form">
-			<form action="login.php" method="post" class="fright form-small">
+			<form action="index.html" method="post" class="fright form-small">
 				<div class="form-bar">
 					<div class="logo-small">HiterBuy!</div>
 				</div>
