--- a/index.html
+++ b/index.html
@@ -8,43 +8,51 @@
 </head>
 <body>
 	<div class="head">
-		<div class="header-top border-padding">
-			<a href="index.php" class="fleft">HITERBUY!~分类</a>
-			<ul class="fright">
-				<li><a href="login.html">你好～请登录</a></li>
-				<li class="spacer"></li>
-				<li><a href="register.html">免费注册</a></li>
-				<li class="spacer"></li>
-				<li><a href="userInfo.php">个人信息</a></li>
-				<li class="spacer"></li>
-				<li><a href="userHistory.php">我的发布</a></li>
-				<li class="spacer"></li>
-				<li><a href="message.php" id="last">消息记录</a></li>
-			</ul>
-		</div>	
-		<div class="header-large border-padding">
-			<a href="index.php" class="logo">HITERBUY!</a>
-			<form class="search" action="list.php" method="get">
-				<input type="text" name="query" placeholder="搜寻物品">
+		<div class="header-top">
+			<div class="w">
+				<a href="index.php" class="fleft">HITER!BUY~分类</a>
+				<ul class="fright">
+					<li><a href="login.html">你好～请登录</a></li>
+					<li class="spacer"></li>
+					<li><a href="register.html">免费注册</a></li>
+					<li class="spacer"></li>
+					<li><a href="userInfo.php">个人信息</a></li>
+					<li class="spacer"></li>
+					<li><a href="userHistory.php">我的发布</a></li>
+					<li class="spacer"></li>
+					<li><a href="message.php" id="last">消息记录</a></li>
+				</ul>
+			</div>	
+		</div>
+		<div class="header-large w">
+			<a href="index.php" class="fleft">
+				<img src="img/logo-2.jpg">
+			</a>
+			<form class="search fleft" action="list.php" method="get">
+				<input type="text" name="keyWord" placeholder="搜寻物品">
 				<button type="submit" class="btn-search">搜索</button>
 			</form>
 			<div class="fright"></div>
-		</div>	
-		<div class="navbar">
-			<div class="navbar-header">
-				<a href="list.php" class="navbar-brand">所有商品分类</a>
-			</div>
-			<ul class="navbar-nav">
-				<li><a href="discuz.php">工大之声</a></li>
-				<li><a href="torch.php">学长火炬</a></li>
-				<li><a href="goodsNeed.php">商品求购</a></li>
-				<li><a href="discuz.php">闲置发布</a></li>
-			</ul>
-		</div>	
+		</div>
+		<div class="header-bottom">	
+			<div class="w">
+				<div>
+					<a href="list.php">所有商品分类</a>
+				</div>
+				<ul>
+					<li><a href="discuz.php">工大之声</a></li>
+					<li><a href="torch.php">学长火炬</a></li>
+					<li><a href="goodsNeed.php">商品求购</a></li>
+					<li><a href="discuz.php">闲置发布</a></li>
+				</ul>
+			</div>	
+		</div>
 	</div>
 	<div class="banner">
-		<div></div>
-		<div></div>
+		<div class="w">
+			<div class="lside"></div>
+			<div class="rside"></div>
+		</div>
 	</div>
 	<div class="content"></div>
 	<div class="footer">
