--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 				<ul>
 					<li><a href="discuz.php">工大之声</a></li>
 					<li><a href="torch.php">学长火炬</a></li>
+					<li><a href="hitdn110.php">电脑维修</a></li>
 					<li><a href="goodsNeed.php">商品求购</a></li>
 					<li><a href="discuz.php">闲置发布</a></li>
 				</ul>
@@ -50,8 +51,27 @@
 	</div>
 	<div class="banner">
 		<div class="w">
-			<div class="lside"></div>
-			<div class="rside"></div>
+			<div class="lside fleft">
+				<div class="life-server">
+					<ul class="ls-header">
+						<li><a href="#">校园新闻</a></li>
+						<li><a href="#">饭卡充值</a></li>
+						<li><a href="#">校园网费</a></li>
+						<li><a href="#">饮水订购</a></li>
+						<li><a href="#">话费充值</a></li>
+					</ul>
+					<div class="ls-inner">
+						<div id="schoolNews"></div>
+						<div id="cardCharge"></div>
+						<div id="netCharge"></div>
+						<div id="waterBook"></div>
+						<div id="phoneCharge"></div>
+					</div>
+				</div>
+			</div>
+			<div class="rside">
+			
+			</div>
 		</div>
 	</div>
 	<div class="content"></div>
