--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 			</div>	
 		</div>
 		<div class="header-large w">
-			<a href="index.php" class="fleft">
-				<img src="img/logo-2.jpg">
-			</a>
+			<div class="logoo">
+				<a href="index.html"></a>
+			</div>
 			<form class="search fleft" action="list.php" method="get">
-				<input type="text" name="keyWord" placeholder="搜寻物品">
+				<input type="text" name="keyWord" placeholder="搜索二手书籍/二手数码/二手电子diy">
 				<button type="submit" class="btn-search">搜索</button>
 			</form>
 			<div class="fright"></div>
@@ -37,7 +37,7 @@
 		<div class="header-bottom">	
 			<div class="w">
 				<div>
-					<a href="list.php">所有商品分类</a>
+					<a href="list.php">工大生活助手</a>
 				</div>
 				<ul>
 					<li><a href="discuz.php">工大之声</a></li>
@@ -51,26 +51,30 @@
 	</div>
 	<div class="banner">
 		<div class="w">
-			<div class="lside fleft">
-				<div class="life-server">
-					<ul class="ls-header">
-						<li><a href="#">校园新闻</a></li>
-						<li><a href="#">饭卡充值</a></li>
-						<li><a href="#">校园网费</a></li>
-						<li><a href="#">饮水订购</a></li>
-						<li><a href="#">话费充值</a></li>
-					</ul>
-					<div class="ls-inner">
-						<div id="schoolNews"></div>
-						<div id="cardCharge"></div>
-						<div id="netCharge"></div>
-						<div id="waterBook"></div>
-						<div id="phoneCharge"></div>
+			<div class="lside">
+				<div class="tab">
+					<div class="tabList">
+						<ul class="ls-header">
+							<li><a href="#">饭卡充值</a></li>
+							<li><a href="#">校园网费</a></li>
+							<li><a href="#">饮水订购</a></li>
+						</ul>
+					</div>
+					<div class="tabCon">
+						<div class="cur">	
+							饭卡充值
+						</div>
+						<div>
+							网费充值
+						</div>
+						<div>
+							饮水预定
+						</div>
 					</div>
 				</div>
 			</div>
+			<div class="carousel"></div>
 			<div class="rside">
-			
 			</div>
 		</div>
 	</div>
