--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
 	<div class="head">
 		<div class="header-top">
 			<div class="w">
-				<a href="index.php" class="fleft">HITER!BUY~分类</a>
+				<a href="index.php" class="fleft subMenu" onmouseover="displaySubMenu(this)" onmouseout="hideSubMenu(this)">HITER!BUY~分类
+					<ul>
+						<li><a href="#">二手书籍</a></li>
+						<li><a href="#">二手数码</a></li>
+						<li><a href="#">二手电子</a></li>
+						<li><a href="#">二手家具</a></li>
+					</ul>
+				</a>
 				<ul class="fright">
 					<li><a href="login.html">你好～请登录</a></li>
 					<li class="spacer"></li>
@@ -63,55 +70,55 @@
 					<div class="tabCon">
 						<div class="cur">	
 							<form action="#" method="post">
-								<div class="form-group">
+								<div class="form-charge">
 									<div class="head">饭卡金额轻松充</div>
 								</div>
-								<div class="form-group">
+								<div class="form-charge">
 									<label>充值学号:</label>
 									<input type="text" name="schoolNumber" class="item"/>
 								</div>
-								<div class="form-group">
-									<label>充值金额</label>
+								<div class="form-charge">
+									<label>充值金额:</label>
 									<input type="text" name="schoolNumber" class="item"/>
 								</div>
-								<div class="form-group">
-									<input type="submit" value="立即充值" class="btn"/>
+								<div class="form-charge">
+									<input type="submit" value="立即充值" class="btn-lside"/>
 								</div>
 							</form>
 						</div>
 						<div>
 							<form action="#" method="post">
-								<div class="form-group">
+								<div class="form-charge">
 									<div class="head">网费充值畅快玩</div>
 								</div>
-								<div class="form-group">
-									<label>网费账号</label>
+								<div class="form-charge">
+									<label>网费账号:</label>
 									<input type="text" name="schoolNumber" class="item"/>
 								</div>
-								<div class="form-group">
-									<label>缴费金额</label>
+								<div class="form-charge">
+									<label>缴费金额:</label>
 									<input type="text" name="moneyNumber" class="item"/>
 								</div>
-								<div class="form-group">
-									<input type="submit" value="立即充值" class="btn"/>
+								<div class="form-charge">
+									<input type="submit" value="立即充值" class="btn-lside"/>
 								</div>
 							</form>
 						</div>
 						<div>
 							<form action="#" method="post">
-								<div class="form-group">
+								<div class="form-charge">
 									<div class="head">饮水续流生活美</div>
 								</div>
-								<div class="form-group">
-									<label>公寓号</label>
+								<div class="form-charge">
+									<label>公寓号:</label>
 									<input type="text" name="hotelNumber" class="item"/>
 								</div>
-								<div class="form-group">
+								<div class="form-charge">
 									<label>寝室号</label>
 									<input type="text" name="roomNumber" class="item"/>
 								</div>
-								<div class="form-group">
-									<input type="submit" value="立即订购" class="btn"/>
+								<div class="form-charge">
+									<input type="submit" value="立即订购" class="btn-lside"/>
 								</div>
 							</form>
 
@@ -119,8 +126,11 @@
 					</div>
 				</div>
 			</div>
-			<div class="carousel"></div>
+			<div class="carousel">
+				
+			</div>
 			<div class="rside">
+				
 			</div>
 		</div>
 	</div>
