--- a/index.html
+++ b/index.html
@@ -153,11 +153,45 @@
 				</div>
 			</div>
 			<div class="rside">
-				
+				<div class="news">
+					<div class="news-header">
+						<h2>HITNEWS</h2>
+						<a href="#" class="hover">more &nbsp></a>
+					</div>
+					<div class="news-item">
+						<ul>
+							<li><a href="#" class="hover">hiterbuy上线了hiterbuy上线了</a></li>
+							<li><a href="#" class="hover">hiterbuy上线了hiterbuy上线了</a></li>
+							<li><a href="#" class="hover">hiterbuy上线了hiterbuy上线了</a></li>
+							<li><a href="#" class="hover">hiterbuy上线了hiterbuy上线了</a></li>
+						</ul>
+					</div>
+				</div>
+				<div class="news">
+					<div class="news-header">
+						<h2>个人消息</h2>
+						<a href="#" class="hover">更多 &nbsp></a>
+					</div>
+					<div class="news-item">
+						<ul>
+							<li><a href="#" class="hover">hiterbuy上线了hiterbuy上线了</a></li>
+							<li><a href="#" class="hover">hiterbuy上线了hiterbuy上线了</a></li>
+							<li><a href="#" class="hover">hiterbuy上线了hiterbuy上线了</a></li>
+							<li><a href="#" class="hover">hiterbuy上线了hiterbuy上线了</a></li>
+						</ul>
+					</div>
+				</div>	
 			</div>
 		</div>
 	</div>
-	<div class="content"></div>
+	<div class="content">
+		<div class="w">
+			<div class="needs">
+				
+			</div>
+			<div class=""></div>
+		</div>
+	</div>
 	<div class="footer">
 		<div class="links">
 			<a href="#">关于hiterbuy</a>|		
