--- a/index.html
+++ b/index.html
@@ -189,7 +189,29 @@
 			<div class="needs">
 				
 			</div>
-			<div class=""></div>
+		</div>
+		<div class="cut-bar">
+			<div class="w"><span>HITER!BUY</span>~最新发布</div>	
+		</div>
+		<div class="w">
+			<ul class="goodsList">
+				<li class="gl-item">
+					<div class="gl-i-wrap">
+						<div class="p-img p-width">
+							<a href="#"><img src="/img/p-img.png"></a>
+						</div>
+						<div class="p-price p-width">
+							<strong>￥9999.0</strong>
+						</div>
+						<div class="p-head p-width">
+							<a href="#" class="hover">考研政治资料</a>
+						</div>
+						<div class="p-author p-width">
+							小马哥出售<a href="#" class="hover">联系卖家</a>	
+						</div>
+					</div>
+				</li>
+			</ul>
 		</div>
 	</div>
 	<div class="footer">
