--- a/index.html
+++ b/index.html
@@ -185,33 +185,113 @@
 		</div>
 	</div>
 	<div class="content">
-		<div class="w">
-			<div class="needs">
-				
-			</div>
-		</div>
 		<div class="cut-bar">
 			<div class="w"><span>HITER!BUY</span>~最新发布</div>	
 		</div>
 		<div class="w">
-			<ul class="goodsList">
-				<li class="gl-item">
-					<div class="gl-i-wrap">
-						<div class="p-img p-width">
-							<a href="#"><img src="/img/p-img.png"></a>
+			<div class="goods">
+				<ul class="goodsList">
+					<li class="gl-item" onmouseover="classShow(this,'gl-item shadow')" onmouseout="classShow(this,'gl-item')" >
+						<div class="gl-i-wrap">
+							<div class="p-img p-width">
+								<a href="#"><img src="/img/p-img.png"></a>
+							</div>
+							<div class="p-price p-width">
+								<strong>￥9999.0</strong>
+							</div>
+							<div class="p-head p-width">
+								<a href="#" class="hover">考研政治资料</a>
+							</div>
+							<div class="p-author p-width">
+								小马哥出售<a href="#" class="hover">联系卖家</a>	
+							</div>
 						</div>
-						<div class="p-price p-width">
-							<strong>￥9999.0</strong>
+					</li>
+				 	<li class="gl-item" onmouseover="classShow(this,'gl-item shadow')" onmouseout="classShow(this,'gl-item')" >
+						<div class="gl-i-wrap">
+							<div class="p-img p-width">
+								<a href="#"><img src="/img/p-img.png"></a>
+							</div>
+							<div class="p-price p-width">
+								<strong>￥9999.0</strong>
+							</div>
+							<div class="p-head p-width">
+								<a href="#" class="hover">考研政治资料</a>
+							</div>
+							<div class="p-author p-width">
+								小马哥出售<a href="#" class="hover">联系卖家</a>	
+							</div>
 						</div>
-						<div class="p-head p-width">
-							<a href="#" class="hover">考研政治资料</a>
+					</li>
+					<li class="gl-item" onmouseover="classShow(this,'gl-item shadow')" onmouseout="classShow(this,'gl-item')" >
+						<div class="gl-i-wrap">
+							<div class="p-img p-width">
+								<a href="#"><img src="/img/p-img.png"></a>
+							</div>
+							<div class="p-price p-width">
+								<strong>￥9999.0</strong>
+							</div>
+							<div class="p-head p-width">
+								<a href="#" class="hover">考研政治资料</a>
+							</div>
+							<div class="p-author p-width">
+								小马哥出售<a href="#" class="hover">联系卖家</a>	
+							</div>
 						</div>
-						<div class="p-author p-width">
-							小马哥出售<a href="#" class="hover">联系卖家</a>	
+					</li>
+					<li class="gl-item" onmouseover="classShow(this,'gl-item shadow')" onmouseout="classShow(this,'gl-item')" >
+						<div class="gl-i-wrap">
+							<div class="p-img p-width">
+								<a href="#"><img src="/img/p-img.png"></a>
+							</div>
+							<div class="p-price p-width">
+								<strong>￥9999.0</strong>
+							</div>
+							<div class="p-head p-width">
+								<a href="#" class="hover">考研政治资料</a>
+							</div>
+							<div class="p-author p-width">
+								小马哥出售<a href="#" class="hover">联系卖家</a>	
+							</div>
 						</div>
-					</div>
-				</li>
-			</ul>
+					</li>
+					<li class="gl-item" onmouseover="classShow(this,'gl-item shadow')" onmouseout="classShow(this,'gl-item')" >
+						<div class="gl-i-wrap">
+							<div class="p-img p-width">
+								<a href="#"><img src="/img/p-img.png"></a>
+							</div>
+							<div class="p-price p-width">
+								<strong>￥9999.0</strong>
+							</div>
+							<div class="p-head p-width">
+								<a href="#" class="hover">考研政治资料</a>
+							</div>
+							<div class="p-author p-width">
+								小马哥出售<a href="#" class="hover">联系卖家</a>	
+							</div>
+						</div>
+					</li>
+
+				</ul>
+			</div>	
+			<div class="needs">
+				<div class="needs-head">求购信息</div>
+				<ul class="needsList">
+					<li class="nl-item">
+						<div class="nl-i-wrap">
+							<div class="nl-img nl-width">
+								<a href="#"><img src="img/p-img.png"></a>	
+							</div>
+							<div class="nl-head nl-width">
+								<a href="#" class="hover">求购饭卡一张，不胜感激</a>
+							</div>
+							<div class="p-author nl-width">
+								小马哥求购<a href="#" class="hover">出手帮他</a>	
+							</div>
+						</div>
+					</li>
+				</ul>
+			</div>
 		</div>
 	</div>
 	<div class="footer">
