--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
 				<div id="tab">
 					<div class="tabList">
 						<ul class="ls-header">
-							<li class="cur"><a href="#">饭卡充值</a></li>
-							<li><a href="#">校园网费</a></li>
-							<li><a href="#">饮水订购</a></li>
+							<li class="cur" onmouseover="tabCard()"><a href="#">饭卡充值</a></li>
+							<li><a href="#" onmouseover="tabCard()">校园网费</a></li>
+							<li><a href="#" onmouseover="tabCard()">饮水订购</a></li>
 						</ul>
 					</div>
 					<div class="tabCon">
@@ -126,7 +126,6 @@
 									<input type="submit" value="立即订购" class="btn-lside"/>
 								</div>
 							</form>
-
 						</div>
 					</div>
 				</div>
@@ -138,16 +137,16 @@
 					<ul id="list"></ul>
 					<div id="banner_list">
 						<a href="#" target="_blank">
-							<img src="img/p1.jpg">
+							<img src="img/j1.jpg">
 						</a>
 						<a href="#" target="_blank">
-							<img src="img/p2.jpg">
+							<img src="img/j2.jpg">
 						</a>
 						<a href="#" target="_blank">
-							<img src="img/p3.jpg">
+							<img src="img/j3.jpg">
 						</a>
 						<a href="#" target="_blank">
-							<img src="img/p4.jpg">
+							<img src="img/j4.jpg">
 						</a>
 					</div>
 				</div>
@@ -188,9 +187,9 @@
 		<div class="cut-bar">
 			<div class="w"><span>HITER!BUY</span>~最新发布</div>	
 		</div>
-		<div class="w">
+		<div class="w group">
 			<div class="goods">
-				<ul class="goodsList">
+				<ul class="goodsList group">
 					<li class="gl-item" onmouseover="classShow(this,'gl-item shadow')" onmouseout="classShow(this,'gl-item')" >
 						<div class="gl-i-wrap">
 							<div class="p-img p-width">
@@ -275,7 +274,7 @@
 				</ul>
 			</div>	
 			<div class="needs">
-				<div class="needs-head">求购信息</div>
+				<h2 class="needs-head">求购信息</h2>
 				<ul class="needsList">
 					<li class="nl-item">
 						<div class="nl-i-wrap">
