--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<div class="head">
 		<div class="header-top">
 			<div class="w">
-				<div class="fleft subMenu" onmouseover="displaySubMenu(this)" onmouseout="hideSubMenu(this)">
+				<div class="fleft subMenu" onmouseover="displaySubMenu(this,'bg-change subMenu fleft')" onmouseout="hideSubMenu(this,'subMenu fleft')">
 					<span class="icon-hamburger"></span>
 					<a href="index.php" >HITER!BUY~分类
 					</a>
@@ -56,7 +56,7 @@
 					<li><a href="torch.php">学长火炬</a></li>
 					<li><a href="hitdn110.php">电脑维修</a></li>
 					<li><a href="goodsNeed.php">商品求购</a></li>
-					<li><a href="discuz.php">闲置发布</a></li>
+					<li><a href="issue.html">闲置发布</a></li>
 				</ul>
 			</div>	
 		</div>
@@ -193,7 +193,7 @@
 					<li class="gl-item" onmouseover="classShow(this,'gl-item shadow')" onmouseout="classShow(this,'gl-item')" >
 						<div class="gl-i-wrap">
 							<div class="p-img p-width">
-								<a href="#"><img src="/img/p-img.png"></a>
+								<a href="desc.html"><img src="/img/p-img.png"></a>
 							</div>
 							<div class="p-price p-width">
 								<strong>￥9999.0</strong>
